LU-1716 test: Verify connection flags race

Add OBD_TIMEOUT after setting improt to FULL state

Signed-off-by: Andriy Skulysh <Andriy_Skulysh@xyratex.com>
Xyratex-bug-id: MRP-577
Change-Id: I301abdb1857e4105210a4af71bd57bbda89d1abb
Reviewed-on: http://review.whamcloud.com/3654
Tested-by: Hudson
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>